# beancafiine

./: .gitignore  CMakeLists.txt  README.md  beandef.h  buffer.c  buffer.h  byteorder.h  cafiine.h  connection.c  connection.h  files.c  files.h  main.c  stream.c  stream.h
